--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
       <div class="container"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="row aos">
-          <h2 style="color: #000000; padding: 10px;">Bahasa Pemrograman<br> yang dipelajari</h2>
+          <h2 style="color: #000000; padding: 10px;">Bahasa Pemrograman yang dipelajari</h2>
         </div>
         <a class="aos" href="bahasa.html">
           <div class="blobs-container">
@@ -772,10 +772,8 @@
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <div class="card-c">
               <div class="heading">PMDK</div>
-              <div class="details"> Click Me !</div>
-              <div class="detail">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP
-                TM sendiri merupakan kepanjangan
-                dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
+              <div class="details">&ensp; Point Me !</div>
+              <div class="detail">PMDK merupakan seleksi masuk perguruan tinggi di Universitas Muhammadiyah Jember. PMDK sendiri merupakan kepanjangan dari Penelurusan Minat dan Kemampuan.</div>
               <button class="btn2">More</button>
             </div>
             <div class="glasses">
@@ -786,7 +784,7 @@
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <div class="card-c">
               <div class="heading">SMPTM</div>
-              <div class="details"> Click Me !</div>
+              <div class="details">&ensp; Point Me !</div>
               <div class="detail">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP
                 TM sendiri
                 merupakan kepanjangan dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
@@ -815,42 +813,44 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
     </svg>
   </main>
-  <!-- foter -->
+  <!-- footer -->
   <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
     <div class="container-fluid">
       <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
         <div class="col-md-4">
           <h3>Sekretariat HMD TE</h3>
+
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
-            <p>Jl. Raya Bandung Sumedang KM. 21 Jatinangor</p>
+            <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
           </div>
           <!-- email -->
           <div class="email icon">
             <i class="fas fa-envelope"></i>
-            <p>ini.email@gmail.com</p>
+            <p>kantorpusat@unmuhjember.ac.id</p>
           </div>
           <!-- telp -->
           <div class="telp icon">
             <i class="fas fa-phone-alt"></i>
-            <p>08123456789</p>
+            <p>(0331) 336728</p>
           </div>
           <!-- sosmed -->
           <div class="sosmed">
-            <a href="https://www.instagram.com/hmdteunpad/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/hmdteunpad/" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com/hmdteunpad" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.youtube.com/channel/UC9Z3Z4ZvX2nX2Z8QZ3Z4ZvX2nX2Z8Q" target="_blank"><i
+            <a href="https://www.instagram.com/unmuhjember_ofc/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100012524498447" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/unmuhjember_ofc?lang=en" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/channel/UCleKMJMJhS_3HwgSLW0Ywfw" target="_blank"><i
                 class="fab fa-youtube"></i></a>
           </div>
         </div>
         <div class="col-md-4">
           <!-- copyright -->
-          <p style="text-align: end;">&copy creator 2023</p>
+          <p style="text-align: end;">&copy 3 Angels Team</p>
         </div>
       </div>
     </div>
   </footer>
+  <!-- footer end -->
   <script src="assets/js/aos.js"></script>
   <script src="slider.js"></script>
   <script src="script.js"></script>
