--- a/prestasi.html
+++ b/prestasi.html
@@ -100,7 +100,7 @@
         <div class="img-c">
           <div style="z-index: 3;" class="heading aos">
             <h1 class="title row">Prestasi dan Capaian</h1>
-            <p class="sub-title row">Teknik Informatika</p>
+            <p class="sub-title row">Teknik Informatika Unmuh Jember</p>
           </div>
         </div>
       </div>
@@ -353,42 +353,44 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
     </svg>
   </main>
-  <!-- foter -->
-  <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
+   <!-- footer -->
+   <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
     <div class="container-fluid">
       <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
         <div class="col-md-4">
           <h3>Sekretariat HMD TE</h3>
+
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
-            <p>Jl. Raya Bandung Sumedang KM. 21 Jatinangor</p>
+            <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
           </div>
           <!-- email -->
           <div class="email icon">
             <i class="fas fa-envelope"></i>
-            <p>ini.email@gmail.com</p>
+            <p>kantorpusat@unmuhjember.ac.id</p>
           </div>
           <!-- telp -->
           <div class="telp icon">
             <i class="fas fa-phone-alt"></i>
-            <p>08123456789</p>
+            <p>(0331) 336728</p>
           </div>
           <!-- sosmed -->
           <div class="sosmed">
-            <a href="https://www.instagram.com/hmdteunpad/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/hmdteunpad/" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com/hmdteunpad" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.youtube.com/channel/UC9Z3Z4ZvX2nX2Z8QZ3Z4ZvX2nX2Z8Q" target="_blank"><i
+            <a href="https://www.instagram.com/unmuhjember_ofc/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100012524498447" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/unmuhjember_ofc?lang=en" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/channel/UCleKMJMJhS_3HwgSLW0Ywfw" target="_blank"><i
                 class="fab fa-youtube"></i></a>
           </div>
         </div>
         <div class="col-md-4">
           <!-- copyright -->
-          <p style="text-align: end;">&copy creator 2023</p>
+          <p style="text-align: end;">&copy 3 Angels Team</p>
         </div>
       </div>
     </div>
   </footer>
+  <!-- footer end -->
   <script src="assets/js/parallax.js"></script>
   <script src="assets/js/aos.js"></script>
   <script src="script.js"></script>
