--- a/forkafest.html
+++ b/forkafest.html
@@ -174,11 +174,11 @@
         <div class="row aos">
           <div class="col-md-4" style="padding: 30px;">
             <!-- card 1 -->
-            <div class="card sutter1">
-              <div class="merah">
+            <div class="card show-shadow">
+              <div class="pubg">
                 <img src="assets/img/icon card/pubg.png" alt="" class="icon-f">
               </div>
-              <button class="allin" id="open1">PUBG MOBILE</button>
+              <button class="to-show-modal" id="open1">PUBG MOBILE</button>
 
             </div>
             <!-- 1 end -->
@@ -186,21 +186,21 @@
 
           <div class="col-md-4" style="padding: 30px;">
             <!-- card 2 -->
-            <div class="card sutter2">
-              <div class="ijo">
-
+            <div class="card show-shadow">
+              <div class="mobile-legend">
+                <img src="assets/img/icon card/mobilelegend.png" alt="" class="icon-f">
               </div>
-              <button class="allin" id="open2" style="background-color: #2bff2b !important;">MOBILE LEGEND</button>
+              <button class="to-show-modal" id="open2">MOBILE LEGEND</button>
             </div>
             <!-- 2 end -->
           </div>
           <div class="col-md-4" style="padding: 30px;">
             <!-- card 3 -->
-            <div class="card sutter3">
-              <div class="ungu">
-                <img src="" alt="">
+            <div class="card show-shadow">
+              <div class="desain">
+                <img src="assets/img/icon card/desain.png" alt="" class="icon-f">
               </div>
-              <button class="allin" id="open3" style="background-color: #9318d1 !important;">DESAIN UI/UX</button>
+              <button class="to-show-modal" id="open3">DESAIN UI/UX</button>
             </div>
             <!-- 3 end -->
           </div>
@@ -208,28 +208,31 @@
         <div class="row aos">
           <div class="col-md-4" style="padding: 30px;">
             <!-- card 4 -->
-            <div class="card sutter2">
-              <div class="ijo">
+            <div class="card show-shadow">
+              <div class="cyber-security">
+                <img src="assets/img/icon card/cyber.png" alt="" class="icon-f">
               </div>
-              <button class="allin" id="open4" style="background-color: #2bff2b !important;">CYBER SECURITY</button>
+              <button class="to-show-modal" id="open4">CYBER SECURITY</button>
             </div>
             <!-- 4 end -->
           </div>
           <div class="col-md-4" style="padding: 30px;">
             <!-- card 5 -->
-            <div class="card sutter3">
-              <div class="ungu">
+            <div class="card show-shadow">
+              <div class="web-development">
+                <img src="assets/img/icon card/web.png" alt="" class="icon-f">
               </div>
-              <button class="allin" id="open5" style="background-color: #9318d1 !important;">WEB DEVELOPMENT</button>
+              <button class="to-show-modal" id="open5">WEB DEVELOPMENT</button>
             </div>
             <!-- 5 end -->
           </div>
           <div class="col-md-4" style="padding: 30px;">
             <!-- card 6 -->
-            <div class="card sutter1">
-              <div class="merah">
+            <div class="card show-shadow">
+              <div class="computer-network">
+                <img src="assets/img/icon card/computernetwork.png" style="width: 100%; height: 100% !important;" alt="" class="icon-f">
               </div>
-              <button class="allin" id="open6" style="font-size: 13px !important;">COMPUTER NETWORK</button>
+              <button class="to-show-modal" id="open6" style="font-size: 13px !important;">COMPUTER NETWORK</button>
             </div>
             <!-- 6 end -->
           </div>
@@ -245,7 +248,7 @@
           <p class="desc" style="padding: 20px 0;">HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 PUBG MOBILE. Hai
             Gamers, Yuk ikut lomba PUBG Mobile
             dalam mengembangkan bakat dan minat para pemain PUBG. Tema : "The Dreams of Teamwork"</p>
-          <button class="iyadong" id="close1">Close</button>
+          <button class="close-modal" id="close1">Close</button>
         </div>
       </div>
       <!-- MODAL 1 END-->
@@ -254,10 +257,10 @@
       <div class="modal-container" id="modal_container2">
         <div class="modal">
           <h1>MOBILE LEGEND</h1>
-          <p class="desc" style="padding: 20px 0;">HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 PUBG MOBILE. Hai
+          <p class="desc" style="padding: 20px 0;">HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 Mobile Legend. Hai
             Gamers, Yuk ikut lomba Mobile
             Legend dalam mengembangkan bakat dan minat para pemain ML. Tema : "Moment of Win"</p>
-          <button class="iyadong" id="close2" style="background-color: #2bff2b;">Close</button>
+          <button class="close-modal" id="close2">Close</button>
         </div>
       </div>
       <!-- MODAL 2 END-->
@@ -271,7 +274,7 @@
             dalam mengapresiasi karya pelajar dan mahasiswa untuk mewujudkan mimpi.
             Tema : "Meningkatkan kreativitas generasi muda dengan teknologi digital dalam menghadapi era society 5.0"
           </p>
-          <button class="iyadong" id="close3" style="background-color: #9318d1;">Close</button>
+          <button class="close-modal" id="close3">Close</button>
         </div>
       </div>
       <!-- MODAL 3 END-->
@@ -285,7 +288,7 @@
             sebagai ajang untuk meningkatkan pengalaman di bidang KEAMANAN INFORMASI.
             Tema : "Bersatu Membangun Peradaban Digital Yang Cerdas, Beradab, dan Berbudaya"
           </p>
-          <button class="iyadong" id="close4" style="background-color: #2bff2b;">Close</button>
+          <button class="close-modal" id="close4">Close</button>
         </div>
       </div>
       <!-- MODAL 4 END-->
@@ -299,7 +302,7 @@
             sebagai ajang untuk meningkatkan pengalaman di bidang Website Development.
             Tema : "To Get Better in Developing"
           </p>
-          <button class="iyadong" id="close5" style="background-color: #9318d1;">Close</button>
+          <button class="close-modal" id="close5">Close</button>
         </div>
       </div>
       <!-- MODAL 5 END-->
@@ -312,7 +315,7 @@
             Whats up guys, Yuk ikut lomba Computer Network
             sebagai ajang untuk meningkatkan pengalaman di bidang Networking.
             Tema : "Explore the World With Internet"</p>
-          <button class="iyadong" id="close6">Close</button>
+          <button class="close-modal" id="close6">Close</button>
         </div>
       </div>
       <!-- MODAL 6 END-->
