--- a/profil.html
+++ b/profil.html
@@ -116,7 +116,7 @@
         <div class="row aos">
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-            <img src="assets/img/logo.png" alt="" style="max-height: 300px; padding: 30px;">
+            <img src="assets/img/teknik.png" alt="" style="max-height: 300px; padding: 30px;">
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
@@ -155,8 +155,8 @@
         <div class="row aos">
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px 50px;">
-            <img src="assets/img/ari.png" alt="" class=" rounded-circle" style="max-height: 300px; max-width: 300px;">
-            <span style="padding-top: 15px; font-weight: 700; font-family: 'Ubuntu', sans-serif;">Ari Eko Wadoyo, S.T., M.Kom</span>
+            <img src="assets/img/pakari.png" alt="" class=" rounded-circle" style="max-height: 300px; max-width: 300px;">
+            <span style="padding-top: 15px; font-weight: 700; font-family: 'Ubuntu', sans-serif;"><b>Ari Eko Wadoyo, S.T., M.Kom</b></span>
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
