--- a/prestasi.html
+++ b/prestasi.html
@@ -148,14 +148,11 @@
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 10px;">
             <div class="card-p">
               <div class="col" style="padding: 20px;">
-                <img src="assets/img/test.png" alt="" class="img-fluid" style="border-radius: 10px;">
+                <img src="assets/img/prestasi/akademik1.png" alt="" class="img-fluid" style="border-radius: 10px;">
               </div>
               <div class="col" style="padding: 20px;">
-                <h3>test</h3>
-                <p class="desc-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eligendi eius earum
-                  nesciunt reiciendis amet, non
-                  excepturi voluptates sed! Facere quod minima, recusandae incidunt asperiores blanditiis nemo quisquam
-                  totam error!</p>
+                <h3>Pilmapres Tingkat Nasional 2023</h3>
+                <p class="desc-p">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).</p>
               </div>
             </div>
 
@@ -256,14 +253,11 @@
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 10px;">
             <div class="card-p2">
               <div class="col" style="padding: 20px;">
-                <img src="assets/img/test.png" alt="" class="img-fluid" style="border-radius: 10px;">
+                <img src="assets/img/prestasi/non-akademik1.png" alt="" class="img-fluid" style="border-radius: 10px;">
               </div>
               <div class="col" style="padding: 20px;">
-                <h3>test</h3>
-                <p class="desc-p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eligendi eius earum
-                  nesciunt reiciendis amet, non
-                  excepturi voluptates sed! Facere quod minima, recusandae incidunt asperiores blanditiis nemo quisquam
-                  totam error!</p>
+                <h3>Forda Jatim E-Sport</h3>
+                <p class="desc-p2">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.</p>
               </div>
             </div>
         
