--- a/bahasa.html
+++ b/bahasa.html
@@ -16,6 +16,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -42,8 +45,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="french">HTML</h1><br>
-          <p class="fries">HTML (Hypertext Markup Language) adalah bahasa markup standar yang digunakan untuk
+          <h1 class="nama-bahasa">HTML</h1><br>
+          <p class="penjelasan">HTML (Hypertext Markup Language) adalah bahasa markup standar yang digunakan untuk
             membangun dan mengatur struktur konten halaman web. HTML menggunakan elemen-elemen dan tag-tag
             yang ditempatkan di dalam dokumen untuk memberikan instruksi kepada browser tentang bagaimana
             halaman web harus ditampilkan kepada pengguna.
@@ -56,7 +59,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="assets/img/div.w3-hide-small.svg" class="prancis">
+          <img src="assets/img/div.w3-hide-small.svg" class="gambar-bahasa">
         </div>
       </div>
     </div>
@@ -68,8 +71,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="french">CSS</h1><br>
-          <p class="fries">CSS (Cascading Style Sheets) adalah bahasa yang
+          <h1 class="nama-bahasa">CSS</h1><br>
+          <p class="penjelasan">CSS (Cascading Style Sheets) adalah bahasa yang
             digunakan untuk mengontrol tampilan dan gaya visual dari elemen-elemen dalam halaman web. Dengan
             menggunakan CSS, kita dapat mengubah warna, tata letak, font, ukuran, dan berbagai properti
             lainnya dari elemen-elemen HTML pada halaman web.
@@ -85,7 +88,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="assets/img/div.w3-hide-small (1).svg" class="prancis">
+          <img src="assets/img/div.w3-hide-small (1).svg" class="gambar-bahasa">
         </div>
       </div>
     </div>
@@ -97,8 +100,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="french">JavaScript</h1><br>
-          <p class="fries">JavaScript adalah bahasa pemrograman tingkat tinggi yang digunakan untuk
+          <h1 class="nama-bahasa">JavaScript</h1><br>
+          <p class="penjelasan">JavaScript adalah bahasa pemrograman tingkat tinggi yang digunakan untuk
             mengembangkan aplikasi web interaktif. Dibandingkan dengan HTML dan CSS yang fokus pada struktur
             dan tampilan, JavaScript memungkinkan kita untuk memberikan interaktivitas, logika, dan
             pengolahan data yang dinamis pada halaman web.
@@ -112,7 +115,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="assets/img/div.w3-hide-small (2).svg" class="prancis">
+          <img src="assets/img/div.w3-hide-small (2).svg" class="gambar-bahasa">
         </div>
       </div>
     </div>
@@ -124,8 +127,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="french">Python</h1><br>
-          <p class="fries">Python adalah bahasa pemrograman tingkat tinggi
+          <h1 class="nama-bahasa">Python</h1><br>
+          <p class="penjelasan">Python adalah bahasa pemrograman tingkat tinggi
             yang didesain dengan fokus pada kejelasan sintaks dan kemudahan pemahaman. Diciptakan oleh Guido
             van Rossum pada tahun 1991, Python memiliki filosofi yang menekankan pada kelegaan kode dan
             membaca seperti pseudocode, sehingga membuatnya menjadi bahasa yang mudah dipelajari dan
@@ -136,7 +139,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="assets/img/div.w3-hide-small (3).svg" class="prancis">
+          <img src="assets/img/div.w3-hide-small (3).svg" class="gambar-bahasa">
         </div>
       </div>
     </div>
@@ -148,8 +151,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="french">PHP</h1><br>
-          <p class="fries">PHP (Hypertext Preprocessor) adalah bahasa
+          <h1 class="nama-bahasa">PHP</h1><br>
+          <p class="penjelasan">PHP (Hypertext Preprocessor) adalah bahasa
             pemrograman skrip yang dirancang khusus untuk pengembangan aplikasi web. PHP biasanya dijalankan
             di sisi server, yang berarti kode PHP dieksekusi di server web sebelum hasilnya dikirim ke
             browser pengguna.
@@ -161,7 +164,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="assets/img/div.w3-hide-small (4).svg" class="prancis">
+          <img src="assets/img/div.w3-hide-small (4).svg" class="gambar-bahasa">
         </div>
       </div>
     </div>
@@ -170,18 +173,19 @@
 
   <!-- SECTION 7 -->
   <section style="background-color: #000; width: 100%; min-height: 610px;">
-
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <h1 class="learn">Quizzes</h1>
-          <p style="color: #ffffff; text-align: center;">Tes skillmu disini !</p>
-            <button class="quiz" style="align-items: center !important;"><a href="quiz.html" style="text-decoration: none; color: #000;">Quizzes</a></button>
+          <p style="color: #fff4a3;; text-align: center;">Tes skillmu disini !</p>
+          <div style="display: flex; justify-content: center; align-items: center;">
+            <a href="quiz.html" class="quiz-button">Quizzes</a>
+          </div>
         </div>
       </div>
     </div>
-
   </section>
+  
   <!-- SECTION 7 END-->
 
   <!-- footer -->
@@ -193,17 +197,17 @@
 
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
-            <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
+            <p style="font-family: 'Mukta', sans-serif;">Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
           </div>
           <!-- email -->
           <div class="email icon">
             <i class="fas fa-envelope"></i>
-            <p>kantorpusat@unmuhjember.ac.id</p>
+            <p style="font-family: 'Mukta', sans-serif;">kantorpusat@unmuhjember.ac.id</p>
           </div>
           <!-- telp -->
           <div class="telp icon">
             <i class="fas fa-phone-alt"></i>
-            <p>(0331) 336728</p>
+            <p style="font-family: 'Mukta', sans-serif;">(0331) 336728</p>
           </div>
           <!-- sosmed -->
           <div class="sosmed">
@@ -216,7 +220,7 @@
         </div>
         <div class="col-md-4">
           <!-- copyright -->
-          <p style="text-align: end;">&copy 3 Angels Team</p>
+          <p style="text-align: end; font-family: 'Mukta', sans-serif;">&copy 3 Angels Team</p>
         </div>
       </div>
     </div>
