--- a/forkafest.html
+++ b/forkafest.html
@@ -396,23 +396,22 @@
 
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
-            <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
+            <p style="font-family: 'Mukta', sans-serif;">Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
           </div>
           <!-- email -->
           <div class="email icon">
             <i class="fas fa-envelope"></i>
-            <p>kantorpusat@unmuhjember.ac.id</p>
+            <p style="font-family: 'Mukta', sans-serif;">kantorpusat@unmuhjember.ac.id</p>
           </div>
           <!-- telp -->
           <div class="telp icon">
             <i class="fas fa-phone-alt"></i>
-            <p>(0331) 336728</p>
+            <p style="font-family: 'Mukta', sans-serif;">(0331) 336728</p>
           </div>
           <!-- sosmed -->
           <div class="sosmed">
             <a href="https://www.instagram.com/unmuhjember_ofc/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100012524498447" target="_blank"><i
-                class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100012524498447" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://twitter.com/unmuhjember_ofc?lang=en" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://www.youtube.com/channel/UCleKMJMJhS_3HwgSLW0Ywfw" target="_blank"><i
                 class="fab fa-youtube"></i></a>
@@ -420,7 +419,7 @@
         </div>
         <div class="col-md-4">
           <!-- copyright -->
-          <p style="text-align: end;">&copy 3 Angels Team</p>
+          <p style="text-align: end; font-family: 'Mukta', sans-serif;">&copy 3 Angels Team</p>
         </div>
       </div>
     </div>
