--- a/prestasi.html
+++ b/prestasi.html
@@ -347,8 +347,8 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
     </svg>
   </main>
-   <!-- footer -->
-   <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
+    <!-- footer -->
+  <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
     <div class="container-fluid">
       <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
         <div class="col-md-4">
@@ -356,17 +356,17 @@
 
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
-            <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
+            <p style="font-family: 'Mukta', sans-serif;">Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
           </div>
           <!-- email -->
           <div class="email icon">
             <i class="fas fa-envelope"></i>
-            <p>kantorpusat@unmuhjember.ac.id</p>
+            <p style="font-family: 'Mukta', sans-serif;">kantorpusat@unmuhjember.ac.id</p>
           </div>
           <!-- telp -->
           <div class="telp icon">
             <i class="fas fa-phone-alt"></i>
-            <p>(0331) 336728</p>
+            <p style="font-family: 'Mukta', sans-serif;">(0331) 336728</p>
           </div>
           <!-- sosmed -->
           <div class="sosmed">
@@ -379,7 +379,7 @@
         </div>
         <div class="col-md-4">
           <!-- copyright -->
-          <p style="text-align: end;">&copy 3 Angels Team</p>
+          <p style="text-align: end; font-family: 'Mukta', sans-serif;">&copy 3 Angels Team</p>
         </div>
       </div>
     </div>
